--- a/static/index.html
+++ b/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="gameApp" ng-controller="mainCtrl">
 
 <head>
     <meta charset="UTF-8">
@@ -8,11 +8,7 @@
     <!-- load bootstrap and our stylesheet -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/\
 css/bootstrap.min.css">
-    <style>
-        body {
-            padding-top: 50px;
-        }
-    </style>
+
     <!-- JS -->
     <!-- load angular and our custom application -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
@@ -20,7 +16,9 @@ css/bootstrap.min.css">
     <script src="js/controller/mainCtrl.js"></script>
 </head>
 
-<body class="container" ng-app="gameApp" ng-controller="mainCtrl">
+<body class="">
+    <header ng-include="header">
+    </header>
     <h2> main heading {{message}}</h2>
     <input ng-model="msg">{{msg}}
 </body>
