--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@ css/bootstrap.min.css">
     <!-- JS -->
     <!-- load angular and our custom application -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controller/mainCtrl.js"></script>
+    <script src="static/js/app.js"></script>
+    <script src="static/js/controller/mainCtrl.js"></script>
 </head>
 
 <body class="">
@@ -21,6 +21,6 @@ css/bootstrap.min.css">
     </header>
     <h2> main heading {{message}}</h2>
     <input ng-model="msg">{{msg}}
-</body>
+</body>https://github.com/ag19/gameWebApp
 
 </html>
