--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ css/bootstrap.min.css">
     <!-- JS -->
     <!-- load angular and our custom application -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-css/1.0.8/angular-css.min.js"></script>
+    <script src="https://unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="static/js/app.js"></script>
     <script src="static/js/controller/mainCtrl.js"></script>
 </head>
