--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="gameApp" >
+<html lang="en" ng-app="gameApp">
 
 <head>
     <base href="/gameWebApp/">
@@ -9,6 +9,7 @@
     <!-- load bootstrap and our stylesheet -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/\
 css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <!-- JS -->
     <!-- load angular and our custom application -->
@@ -21,7 +22,7 @@ css/bootstrap.min.css">
 </head>
 
 <body class="">
-     <div ui-view></div>
+    <div ui-view></div>
 </body>
 
 </html>
